@@ -1,5 +1,6 @@
 package org.labkey.api.data;
 
+import org.apache.commons.beanutils.ConversionException;
 import org.apache.commons.beanutils.ConvertUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
@@ -55,6 +56,7 @@ public class MultiChoice
         public DisplayColumn(ColumnInfo col)
         {
             super(col, false);
+            setTextAlign("left"); //  GitHub Issue 933: Left align MV cells in grids
         }
 
         @Override
@@ -218,7 +220,12 @@ public class MultiChoice
             str.filter(Objects::nonNull)
                     .map(s -> StringUtils.trimToNull(s.toString()))
                     .filter(Objects::nonNull)
-                    .forEach(setCaseSensitive::add);
+                    .forEach(s ->
+                    {
+                        // GitHub Issue 942: Add error for duplicate values for MVTC fields
+                        if (!setCaseSensitive.add(s))
+                            throw new ConversionExceptionWithMessage("Duplicate value provided: " + s);
+                    });
             array = setCaseSensitive.toArray(new String[0]);
         }
 
@@ -273,6 +280,17 @@ public class MultiChoice
         {
             if (isBlank(s))
                 return EMPTY;
+            if (s.startsWith("{") && s.endsWith("}"))
+            {
+                try
+                {
+                    return parsePgArray(s);
+                }
+                catch (ConversionException ignore)
+                {
+                }
+
+            }
             List<String> split = PageFlowUtil.splitStringToValuesForImport(s);
             return from(split.toArray());
         }
@@ -300,6 +318,94 @@ public class MultiChoice
             {
                 throw new RuntimeException(x);
             }
+        }
+
+        /**
+         * Parse a PostgreSQL array text representation, e.g. {@code {a,b,"c d"}}.
+         * <p>
+         * PostgreSQL uses backslash escaping inside quoted elements ({@code \"} for a literal
+         * double-quote, {@code \\} for a literal backslash), unlike CSV which doubles quotes.
+         * Unquoted elements are trimmed of whitespace.
+         */
+        public static Array parsePgArray(@NotNull String s)
+        {
+            if (isBlank(s))
+                return EMPTY;
+
+            s = s.trim();
+            if (!s.startsWith("{") || !s.endsWith("}"))
+                throw new ConversionException("PostgreSQL array literal must be wrapped in {}: " + s);
+
+            String inner = s.substring(1, s.length() - 1);
+            if (inner.isEmpty())
+                return EMPTY;
+
+            List<Object> values = new ArrayList<>();
+            int len = inner.length();
+            int i = 0;
+
+            while (i < len)
+            {
+                // skip leading whitespace before element
+                while (i < len && Character.isWhitespace(inner.charAt(i)))
+                    i++;
+
+                if (i >= len)
+                    break;
+
+                if (inner.charAt(i) == '"')
+                {
+                    // quoted element — backslash escaping
+                    i++; // skip opening quote
+                    StringBuilder sb = new StringBuilder();
+                    while (i < len)
+                    {
+                        char c = inner.charAt(i);
+                        if (c == '\\' && i + 1 < len)
+                        {
+                            sb.append(inner.charAt(i + 1));
+                            i += 2;
+                        }
+                        else if (c == '"')
+                        {
+                            i++; // skip closing quote
+                            break;
+                        }
+                        else
+                        {
+                            sb.append(c);
+                            i++;
+                        }
+                        if (i >= len)
+                            throw new ConversionException("Unterminated quoted string in PostgreSQL array literal");
+                    }
+                    values.add(sb.toString());
+
+                    // after closing quote, expect comma or end
+                    while (i < len && Character.isWhitespace(inner.charAt(i)))
+                        i++;
+                    if (i < len)
+                    {
+                        if (inner.charAt(i) == ',')
+                            i++; // consume delimiter
+                        else
+                            throw new ConversionException("Unexpected character after closing quote in PostgreSQL array literal at position " + i);
+                    }
+                }
+                else
+                {
+                    // unquoted element — read until comma
+                    int start = i;
+                    while (i < len && inner.charAt(i) != ',')
+                        i++;
+                    String token = inner.substring(start, i).trim();
+                    values.add(token);
+                    if (i < len)
+                        i++; // skip comma
+                }
+            }
+
+            return from(values.toArray());
         }
 
         //
@@ -452,7 +558,7 @@ public class MultiChoice
         //
 
         @Override
-        public void free() throws SQLException
+        public void free()
         {
 
         }
@@ -470,49 +576,49 @@ public class MultiChoice
         }
 
         @Override
-        public Object getArray() throws SQLException
+        public Object getArray()
         {
             return toArray(new String[size()]);
         }
 
         @Override
-        public Object getArray(Map<String, Class<?>> map) throws SQLException
+        public Object getArray(Map<String, Class<?>> map)
         {
             return toArray(new String[size()]);
         }
 
         @Override
-        public Object getArray(long index, int count) throws SQLException
+        public Object getArray(long index, int count)
         {
             return subList((int) index, (int) index + count).toArray(new String[0]);
         }
 
         @Override
-        public Object getArray(long index, int count, Map<String, Class<?>> map) throws SQLException
+        public Object getArray(long index, int count, Map<String, Class<?>> map)
         {
             return subList((int) index, (int) index + count).toArray(new String[0]);
         }
 
         @Override
-        public ResultSet getResultSet() throws SQLException
+        public ResultSet getResultSet()
         {
             throw new UnsupportedOperationException();
         }
 
         @Override
-        public ResultSet getResultSet(Map<String, Class<?>> map) throws SQLException
+        public ResultSet getResultSet(Map<String, Class<?>> map)
         {
             throw new UnsupportedOperationException();
         }
 
         @Override
-        public ResultSet getResultSet(long index, int count) throws SQLException
+        public ResultSet getResultSet(long index, int count)
         {
             throw new UnsupportedOperationException();
         }
 
         @Override
-        public ResultSet getResultSet(long index, int count, Map<String, Class<?>> map) throws SQLException
+        public ResultSet getResultSet(long index, int count, Map<String, Class<?>> map)
         {
             throw new UnsupportedOperationException();
         }
@@ -588,6 +694,67 @@ public class MultiChoice
         }
 
         @Test
+        public void testParsePgArray()
+        {
+            // simple unquoted values
+            assertEquals(Array.from(new String[]{"a", "b", "c"}), Array.parsePgArray("{a,b,c}"));
+
+            // quoted values with special chars: comma, escaped quote, escaped backslash
+            assertEquals(Array.from(new String[]{"a,b", "c\"d", "e\\f"}), Array.parsePgArray("{\"a,b\",\"c\\\"d\",\"e\\\\f\"}"));
+
+            // empty array
+            assertEquals(Array.EMPTY, Array.parsePgArray("{}"));
+
+            // blank/empty input
+            assertEquals(Array.EMPTY, Array.parsePgArray(""));
+            assertEquals(Array.EMPTY, Array.parsePgArray("  "));
+
+            // quoted empty string — filtered by Array constructor (trimToNull)
+            assertEquals(Array.from(new String[]{"a"}), Array.parsePgArray("{\"\",a}"));
+
+            // whitespace in quoted elements — trimmed by Array constructor
+            assertEquals(Array.from(new String[]{"a", "b"}), Array.parsePgArray("{\" a \",b}"));
+
+            // whitespace around braces
+            assertEquals(Array.from(new String[]{"x", "y"}), Array.parsePgArray("  {x,y}  "));
+
+            // round-trip: values from testConvert
+            Array expected = Array.from(new String[]{"a,", "b\"", "c "});
+            assertEquals(expected, Array.parsePgArray("{\"a,\",\"b\\\"\",\"c \"}"));
+
+
+            List<String> specialCharArrays = Array.from(new String[]{
+                    "&^G'{\"И<2&)&]#~%:\uD83D\uDC7E*!안GaC;",
+                    ",~-",
+                    "<=0\\!41%d!By&]b",
+                    "A)D'z:&",
+                    "b$Dyf)D;C@",
+                    "c_x-eИ",
+                    "d[dF2cは=&G&1",
+                    "e^\"#x"
+            });
+            String expectedSpecialCharStr = "{\"&^G'{\\\"И<2&)&]#~%:\uD83D\uDC7E*!안GaC;\",\"\\,~-\",\"<=0\\\\!41%d!By&]b\",\"A)D'z:&\",\"b$Dyf)D;C@\",\"c_x-eИ\",\"d[dF2cは=&G&1\",\"e^\\\"#x\"}";
+            assertEquals(specialCharArrays, Array.parsePgArray(expectedSpecialCharStr));
+
+
+            // error: missing braces
+            try
+            {
+                Array.parsePgArray("a,b,c");
+                fail("Expected ConversionException for missing braces");
+            }
+            catch (ConversionException ignored) {}
+
+            // error: unterminated quote
+            try
+            {
+                Array.parsePgArray("{\"abc}");
+                fail("Expected ConversionException for unterminated quote");
+            }
+            catch (ConversionException ignored) {}
+        }
+
+        @Test
         public void testCSV() throws Exception
         {
             Array expected = Array.from(new String[]{"a,", "b\\", "c,d", "e\"f"});
@@ -606,7 +773,7 @@ public class MultiChoice
             {
                 var maps = csvLoader.load();
                 assertEquals(1, maps.size());
-                Map<String,Object> map = maps.get(0);
+                Map<String,Object> map = maps.getFirst();
                 assertTrue(map.get("column") instanceof String);
                 String value = (String) map.get("column");
                 assertEquals(expected, Array.from(value));
@@ -615,7 +782,7 @@ public class MultiChoice
             {
                 var maps = tsvLoader.load();
                 assertEquals(1, maps.size());
-                Map<String,Object> map = maps.get(0);
+                Map<String,Object> map = maps.getFirst();
                 assertTrue(map.get("column") instanceof String);
                 String value = (String) map.get("column");
                 assertEquals(expected, Array.from(value));
