@@ -69,7 +69,6 @@ import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
 import java.util.GregorianCalendar;
-import java.util.List;
 import java.util.Map;
 
 import static org.labkey.api.data.ContainerManager.REQUIRE_USER_COMMENTS_PROPERTY_NAME;
@@ -150,7 +149,7 @@ public class AuditController extends SpringActionController
             String selected = form.getView();
 
             if (selected == null)
-                selected = AuditLogService.get().getAuditProviders().get(0).getEventName();
+                selected = AuditLogService.get().getAuditProviders().getFirst().getEventName();
 
             UserSchema schema = AuditLogService.getAuditLogSchema(getUser(), getContainer());
             QuerySettings settings = new QuerySettings(getViewContext(), QueryView.DATAREGIONNAME_DEFAULT, selected);
@@ -382,16 +381,18 @@ public class AuditController extends SpringActionController
         @Override
         public Object execute(AuditTransactionForm form, BindException errors)
         {
-            List<Long> rowIds;
-            ContainerFilter cf = ContainerFilter.getContainerFilterByName(form.getContainerFilter(), getContainer(), getUser());
+            AuditLogImpl.TransactionRowIds results;
+            User elevatedUser = ElevatedUser.ensureCanSeeAuditLogRole(getContainer(), getUser());
+            ContainerFilter cf = ContainerFilter.getContainerFilterByName(form.getContainerFilter(), getContainer(), elevatedUser);
             if (form.isSampleType())
-                rowIds = AuditLogImpl.get().getTransactionSampleIds(form.getTransactionAuditId(), ElevatedUser.ensureCanSeeAuditLogRole(getContainer(), getUser()), getContainer(), cf);
+                results = AuditLogImpl.get().getTransactionSampleIds(form.getTransactionAuditId(), elevatedUser, getContainer(), cf);
             else
-                rowIds = AuditLogImpl.get().getTransactionSourceIds(form.getTransactionAuditId(), ElevatedUser.ensureCanSeeAuditLogRole(getContainer(), getUser()), getContainer(), cf);
+                results = AuditLogImpl.get().getTransactionSourceIds(form.getTransactionAuditId(), elevatedUser, getContainer(), cf);
 
             ApiSimpleResponse response = new ApiSimpleResponse();
             response.put("success", true);
-            response.put("rowIds", rowIds);
+            response.put("rowIds", results.rowIds());
+            response.put("dataTypeRowCounts", results.dataTypeRowCounts());
 
             return response;
         }
