@@ -42,6 +42,7 @@ import org.labkey.api.data.DbScope;
 import org.labkey.api.data.ExpDataFileConverter;
 import org.labkey.api.data.ImportAliasable;
 import org.labkey.api.data.JdbcType;
+import org.labkey.api.data.MultiChoice;
 import org.labkey.api.data.NameGenerator;
 import org.labkey.api.data.RemapCache;
 import org.labkey.api.data.SimpleFilter;
@@ -95,6 +96,7 @@ import org.labkey.api.exp.query.ExpTable;
 import org.labkey.api.exp.query.SamplesSchema;
 import org.labkey.api.qc.DataState;
 import org.labkey.api.qc.SampleStatusService;
+import org.labkey.api.query.AbstractQueryImportAction;
 import org.labkey.api.query.BatchValidationException;
 import org.labkey.api.query.FieldKey;
 import org.labkey.api.query.FileColumnValueMapper;
@@ -123,6 +125,7 @@ import org.labkey.api.view.ViewBackgroundInfo;
 import org.labkey.experiment.api.AliasInsertHelper;
 import org.labkey.experiment.api.ExpDataClassDataTableImpl;
 import org.labkey.experiment.api.ExpMaterialTableImpl;
+import org.labkey.experiment.api.ExpRunItemTableImpl;
 import org.labkey.experiment.api.ExpSampleTypeImpl;
 import org.labkey.experiment.api.ExperimentServiceImpl;
 import org.labkey.experiment.api.SampleTypeServiceImpl;
@@ -153,6 +156,7 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -870,9 +874,6 @@ public class ExpDataIterators
         ExpDataIterators.DerivationDataIteratorBuilder ddib = new ExpDataIterators.DerivationDataIteratorBuilder(di, container, user, isSample, dataType, skipAliquot, true);
         DataIteratorContext context = new DataIteratorContext();
         context.setInsertOption(QueryUpdateService.InsertOption.UPDATE);
-        Map<Enum, Object> configParameters = new HashMap<>();
-        configParameters.put(ExperimentService.QueryOptions.UseLsidForUpdate, true);
-        context.setConfigParameters(configParameters);
         DataIterator derive = ddib.getDataIterator(context);
         new Pump(derive, context).run();
         if (context.getErrors().hasErrors())
@@ -943,7 +944,7 @@ public class ExpDataIterators
             {
                 if (parents.size() > 1)
                     context.getErrors().addRowError(new ValidationException(String.format("Multiple %s values are provided.", ALIQUOTED_FROM_INPUT)));
-                return parents.get(0);
+                return parents.getFirst();
             }
         }
 
@@ -1449,9 +1450,10 @@ public class ExpDataIterators
 
     private static class DataUpdateDerivationDataIterator extends DerivationDataIteratorBase
     {
-        // Map from Data name to Set of (parentColName, parentName)
-        final Map<String, Set<Pair<String, String>>> _parentNames;
-        final boolean _useLsid;
+        // Map from Data key (RowId or name) to Set of (parentColName, parentName)
+        final Map<Object, Set<Pair<String, String>>> _parentNames;
+        final Integer _rowIdCol;
+        final boolean _useRowId;
 
         protected DataUpdateDerivationDataIterator(DataIterator di, DataIteratorContext context, Container container, User user, ExpObject currentDataType, boolean checkRequiredParent)
         {
@@ -1459,7 +1461,8 @@ public class ExpDataIterators
 
             Map<String, Integer> map = DataIteratorUtil.createColumnNameMap(di);
             _parentNames = new LinkedHashMap<>();
-            _useLsid = map.containsKey("lsid") && context.getConfigParameterBoolean(ExperimentService.QueryOptions.UseLsidForUpdate);
+            _rowIdCol = map.getOrDefault(ExpDataTable.Column.RowId.name(), -1);
+            _useRowId = map.containsKey(ExpDataTable.Column.RowId.name());
         }
 
         @Override
@@ -1474,9 +1477,15 @@ public class ExpDataIterators
             // For each iteration, collect the parent col values
             if (hasNext)
             {
-                String key = null;
-                if (_useLsid && _lsidCol != null)
-                    key = (String) get(_lsidCol);
+                Object key = null;
+                if (_useRowId && _rowIdCol != null)
+                {
+                    key = get(_rowIdCol);
+                    if (key instanceof String k)
+                        key = Long.parseLong(k);
+                    else
+                        key = asLong(key);
+                }
                 else if (_nameCol != null)
                     key = (String) get(_nameCol);
 
@@ -1504,9 +1513,11 @@ public class ExpDataIterators
                     Map<Long, ExpData> dataCache = new LongHashMap<>();
 
                     List<UploadSampleRunRecord> runRecords = new ArrayList<>();
-                    for (String key : _parentNames.keySet())
+                    for (Object key : _parentNames.keySet())
                     {
-                        ExpData expData = _useLsid ? ExperimentService.get().getExpData(key) : getDataClass().getData(_container, key);
+                        ExpData expData = _useRowId
+                            ? ExperimentService.get().getExpData((Long) key)
+                            : getDataClass().getData(_container, (String) key);
                         if (expData == null)
                             continue;
 
@@ -1612,7 +1623,7 @@ public class ExpDataIterators
         if ((dataOutputs.isEmpty() && (materialOutputs.isEmpty() || (materialOutputs.size() == 1 && materialOutputs.contains(runItem))))
            || (materialOutputs.isEmpty() && dataOutputs.size() == 1 && dataOutputs.contains(runItem)))
         {
-            LOG.debug("Run item '" + runItem.getName() + "' has existing source derivation run '" + existingDerivationRun.getRowId() + "' -- run has no other outputs, deleting run");
+            LOG.debug("Run item '{}' has existing source derivation run '{}' -- run has no other outputs, deleting run", runItem.getName(), existingDerivationRun.getRowId());
             // if run has no other outputs, delete the run completely
             runItem.setSourceApplication(null);
             try
@@ -1630,7 +1641,7 @@ public class ExpDataIterators
         }
         else
         {
-            LOG.debug("Run item '" + runItem.getName() + "' has existing source derivation run '" + existingDerivationRun.getRowId() + "' -- run has other " + dataOutputs.size() + " data outputs and " + materialOutputs.size() + " material outputs, removing sample from run");
+            LOG.debug("Run item '{}' has existing source derivation run '{}' -- run has other {} data outputs and {} material outputs, removing sample from run", runItem.getName(), existingDerivationRun.getRowId(), dataOutputs.size(), materialOutputs.size());
             // if the existing run has other outputs, remove the run as the source application for this sample
             // and remove it as an output from the run
             runItem.setSourceApplication(null);
@@ -2369,7 +2380,10 @@ public class ExpDataIterators
 
             // useTransactionAuditCache already set for import and merge in AbstractQueryImportAction.createDataIteratorContext
             if (context.getInsertOption() == QueryUpdateService.InsertOption.INSERT)
-                context.setUseTransactionAuditCache(true);
+            {
+                if (Boolean.FALSE != context.getConfigParameter(AbstractQueryImportAction.Params.useTransactionAuditCache))
+                    context.setUseTransactionAuditCache(true);
+            }
 
             // add FileLink DataIterator if any input columns are of type FILE_LINK
             if (null != _fileLinkDirectory)
@@ -2428,15 +2442,8 @@ public class ExpDataIterators
             }
             else
             {
-                if (isMergeOrUpdate)
-                {
-                    boolean isUpdateUsingLsid = isUpdateOnly &&
-                            colNameMap.containsKey(ExpDataTable.Column.LSID.name()) &&
-                            context.getConfigParameterBoolean(ExperimentService.QueryOptions.UseLsidForUpdate);
-
-                    if (isUpdateUsingLsid && !canUpdateNames)
-                        dontUpdate.add(ExpDataTable.Column.Name.name());
-                }
+                if (isUpdateOnly && !canUpdateNames)
+                    dontUpdate.add(ExpDataTable.Column.Name.name());
             }
 
             // Since we support detailed audit logging, add the ExistingRecordDataIterator here just before TableInsertDataIterator.
@@ -2480,11 +2487,15 @@ public class ExpDataIterators
                     .setCommitRowsBeforeContinuing(true)
                     .setFailOnEmptyUpdate(false));
 
+            // Biologics reclassify uses afterUpdate to update other data that depend on the completion of update of the triggering data
+            Object checkShouldCommitFn = ((ExpRunItemTableImpl<?>) _expTable).getCustomTableConfig(ExperimentService.QueryOptions.ShouldCommitRowsBeforeContinuing);
+            boolean shouldCommitRowsBeforeContinuing = checkShouldCommitFn instanceof Predicate<?> fn && ((Predicate<Set<String>>) fn).test(colNameMap.keySet());
             // pass in remap columns to help reconcile columns that may be aliased in the virtual table
             dib = LoggingDataIterator.wrap(new TableInsertDataIteratorBuilder(dib, _propertiesTable, _container)
                     .setKeyColumns(propertyKeyColumns)
                     .setDontUpdate(dontUpdate)
                     .setRemapSchemaColumns(((UpdateableTableInfo) _expTable).remapSchemaColumns())
+                    .setCommitRowsBeforeContinuing(shouldCommitRowsBeforeContinuing)
                     .setFailOnEmptyUpdate(false));
 
             if (colNameMap.containsKey(Flag.name()) || colNameMap.containsKey("comment"))
@@ -2700,29 +2711,20 @@ public class ExpDataIterators
                 FieldKey dataKey;
                 boolean isNumeric;
 
-                if (_isSamples)
-                {
-                    var foundId = RowId.namesAndLabels().stream()
-                            .filter(map::containsKey)
-                            .findFirst();
+                var foundId = RowId.namesAndLabels().stream()
+                        .filter(map::containsKey)
+                        .findFirst();
 
-                    if (foundId.isPresent())
-                    {
-                        index = map.get(foundId.get());
-                        dataKey = RowId.fieldKey();
-                        isNumeric = true;
-                    }
-                    else
-                    {
-                        index = map.getOrDefault(Name.name(), -1);
-                        dataKey = Name.fieldKey();
-                        isNumeric = false;
-                    }
+                if (foundId.isPresent())
+                {
+                    index = map.get(foundId.get());
+                    dataKey = RowId.fieldKey();
+                    isNumeric = true;
                 }
                 else
                 {
-                    index = map.getOrDefault(ExpDataTable.Column.Name.name(), -1);
-                    dataKey = ExpDataTable.Column.Name.fieldKey();
+                    index = map.getOrDefault(Name.name(), -1);
+                    dataKey = Name.fieldKey();
                     isNumeric = false;
                 }
 
@@ -3165,6 +3167,8 @@ public class ExpDataIterators
             validFields.add("Storage Unit Label");
             // For consistency with other storage fields that are imported without spaces in the names
             validFields.add("EnteredStorage");
+            validFields.add("StorageComment"); // GH Issue 1051
+            validFields.add("Storage Comment");
             List<Integer> fieldIndexes = new IntArrayList();
             Map<Integer, String> dependencyIndexes = new IntHashMap<>();
             List<String> header = new ArrayList<>();
@@ -3237,6 +3241,12 @@ public class ExpDataIterators
                 return DateUtil.formatIsoDateLongTime(d, true);
             if (data instanceof String s)
                 return _tsvWriter.quoteValue(s.trim());
+            if (data instanceof MultiChoice.Array array)
+            {
+                // GitHub Issue 950: cross folder export/import roundtripping problems for MVTC with commas and quotes
+                return _tsvWriter.quoteValue(array.toString().trim());
+            }
+
             return data;
         }
 
