@@ -24,8 +24,9 @@ import org.apache.commons.collections4.SetUtils;
 import org.apache.commons.collections4.multimap.ArrayListValuedHashMap;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.commons.lang3.math.NumberUtils;
-import org.apache.commons.lang3.mutable.MutableInt;
+import org.apache.commons.lang3.mutable.MutableLong;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.fhcrc.cpas.exp.xml.SimpleTypeNames;
@@ -93,6 +94,7 @@ import org.labkey.api.data.TableInfo;
 import org.labkey.api.data.TableSelector;
 import org.labkey.api.data.TempTableTracker;
 import org.labkey.api.data.dialect.SqlDialect;
+import org.labkey.api.dataiterator.DataClassDataIteratorTransformer;
 import org.labkey.api.dataiterator.DataIteratorBuilder;
 import org.labkey.api.defaults.DefaultValueService;
 import org.labkey.api.exp.AbstractParameter;
@@ -152,7 +154,6 @@ import org.labkey.api.exp.api.ProtocolImplementation;
 import org.labkey.api.exp.api.ProvenanceService;
 import org.labkey.api.exp.api.SampleTypeService;
 import org.labkey.api.exp.api.SimpleRunRecord;
-import org.labkey.api.exp.list.ListDefinition;
 import org.labkey.api.exp.list.ListService;
 import org.labkey.api.exp.property.Domain;
 import org.labkey.api.exp.property.DomainKind;
@@ -284,11 +285,13 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
+import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -327,14 +330,14 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     private static final Logger LOG = LogHelper.getLogger(ExperimentServiceImpl.class, "Experiment infrastructure including maintaining runs and lineage");
 
     private final Cache<Long, ExpProtocolImpl> PROTOCOL_ROW_ID_CACHE = DatabaseCache.get(getExpSchema().getScope(), CacheManager.UNLIMITED, CacheManager.HOUR, "Protocol by RowId",
-        (key, argument) -> getExpProtocol(new SimpleFilter(FieldKey.fromParts("RowId"), key)));
+        (key, _) -> getExpProtocol(new SimpleFilter(FieldKey.fromParts("RowId"), key)));
 
     private final Cache<String, ExpProtocolImpl> PROTOCOL_LSID_CACHE = DatabaseCache.get(getExpSchema().getScope(), CacheManager.UNLIMITED, CacheManager.HOUR, "Protocol by LSID",
-        (key, argument) -> getExpProtocol(new SimpleFilter(FieldKey.fromParts("LSID"), key)));
+        (key, _) -> getExpProtocol(new SimpleFilter(FieldKey.fromParts("LSID"), key)));
 
     private final Cache<String, ExperimentRun> EXPERIMENT_RUN_CACHE = DatabaseCache.get(getExpSchema().getScope(), getTinfoExperimentRun().getCacheSize(), "Experiment Run by LSID", new ExperimentRunCacheLoader());
 
-    private final Cache<String, SortedSet<DataClass>> dataClassCache = CacheManager.getBlockingStringKeyCache(CacheManager.UNLIMITED, CacheManager.DAY, "Data classes", (containerId, argument) ->
+    private final Cache<String, SortedSet<DataClass>> dataClassCache = CacheManager.getBlockingStringKeyCache(CacheManager.UNLIMITED, CacheManager.DAY, "Data classes", (containerId, _) ->
     {
         Container c = ContainerManager.getForId(containerId);
         if (c == null)
@@ -353,6 +356,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     private final Map<String, DataType> _dataTypes = new HashMap<>();
     private final Map<String, ProtocolImplementation> _protocolImplementations = new HashMap<>();
     private final Map<String, ExpProtocolInputCriteria.Factory> _protocolInputCriteriaFactories = new HashMap<>();
+    private final Map<String, Supplier<DataClassDataIteratorTransformer>> _dataClassDataIteratorTransformers = new ConcurrentHashMap<>();
     private final Set<ExperimentProtocolHandler> _protocolHandlers = new HashSet<>();
     private final List<ObjectReferencer> _objectReferencers = new ArrayList<>();
     private final List<ColumnExporter> _columnExporters = new ArrayList<>();
@@ -369,7 +373,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
     public void clearDataClassCache(@Nullable Container c)
     {
-        LOG.debug("clearDataClassCache: " + (c == null ? "all" : c.getPath()));
+        LOG.debug("clearDataClassCache: {}", c == null ? "all" : c.getPath());
         if (c == null)
             dataClassCache.clear();
         else
@@ -536,7 +540,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     @Override
     public List<ExpRunImpl> getExpRuns(Container container, @Nullable ExpProtocol parentProtocol, @Nullable ExpProtocol childProtocol)
     {
-        return getExpRuns(container, parentProtocol, childProtocol, run -> true);
+        return getExpRuns(container, parentProtocol, childProtocol, _ -> true);
     }
 
     @Override
@@ -921,7 +925,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             return null;
         if (materials.size() > 1)
             throw new IllegalArgumentException("Expected 0 or 1 samples, got: " + materials.size());
-        return materials.get(0);
+        return materials.getFirst();
     }
 
     public List<Long> findIdsNotPermittedForOperation(List<? extends ExpMaterial> candidates, SampleTypeService.SampleOperations operation)
@@ -1019,7 +1023,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     @Override
     public void enumerateDocuments(SearchService.TaskIndexingQueue queue, final Date modifiedSince)
     {
-        queue.addRunnable((a) -> {
+        queue.addRunnable((_) -> {
             for (ExpSampleTypeImpl sampleType : getIndexableSampleTypes(queue.getContainer(), modifiedSince))
             {
                 sampleType.index(queue, null);
@@ -1044,13 +1048,13 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         // Clear the last indexed value on all tables that back a search document
         for (TableInfo indexedTable : List.of(getTinfoSampleType(), getTinfoDataClass()))
         {
-            new SqlExecutor(ExperimentService.get().getSchema()).execute("UPDATE " + indexedTable +
+            new SqlExecutor(getExpSchema()).execute("UPDATE " + indexedTable +
                     " SET LastIndexed = NULL WHERE LastIndexed IS NOT NULL");
         }
 
         for (TableInfo indexedTable : List.of(getTinfoMaterialIndexed(), getTinfoDataIndexed()))
         {
-            new SqlExecutor(ExperimentService.get().getSchema()).execute("TRUNCATE TABLE " + indexedTable);
+            new SqlExecutor(getExpSchema()).execute("TRUNCATE TABLE " + indexedTable);
         }
     }
 
@@ -1075,20 +1079,20 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         sql = getSchema().getSqlDialect().limitRows(sql, INDEXING_LIMIT);
         SqlSelector selector = new SqlSelector(getSchema(), sql);
         selector.setJdbcCaching(false);
-        MutableInt maxRowIdProcessed = new MutableInt(minRowId);
+        MutableLong maxRowIdProcessed = new MutableLong(minRowId);
 
         // Work in modest block sizes and fetch as a list so we don't keep the ResultSet open, which could lock the tables
         List<Material> materials = selector.getArrayList(Material.class);
         materials.forEach(m -> {
             ExpMaterialImpl expMaterial = new ExpMaterialImpl(m);
             expMaterial.index(queue, null);
-            maxRowIdProcessed.setValue(Math.max(maxRowIdProcessed.getValue(), expMaterial.getRowId()));
+            maxRowIdProcessed.setValue(Math.max(maxRowIdProcessed.longValue(), expMaterial.getRowId()));
         });
 
         if (materials.size() == INDEXING_LIMIT)
         {
             // Requeue for the next batch. This avoids overwhelming the indexer's queue with documents
-            queue.addRunnable((q) -> indexMaterials(q, modifiedSince, maxRowIdProcessed.getValue()));
+            queue.addRunnable((q) -> indexMaterials(q, modifiedSince, maxRowIdProcessed.longValue()));
         }
     }
 
@@ -1113,20 +1117,20 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         sql = getSchema().getSqlDialect().limitRows(sql, INDEXING_LIMIT);
         SqlSelector selector = new SqlSelector(getSchema(), sql);
         selector.setJdbcCaching(false);
-        MutableInt maxRowIdProcessed = new MutableInt(minRowId);
+        MutableLong maxRowIdProcessed = new MutableLong(minRowId);
 
         // Work in modest block sizes and fetch as a list so we don't keep the ResultSet open, which could lock the tables
         List<Data> data = selector.getArrayList(Data.class);
         data.forEach(d -> {
             ExpDataImpl expData = new ExpDataImpl(d);
             expData.index(queue, null);
-            maxRowIdProcessed.setValue(Math.max(maxRowIdProcessed.getValue(), expData.getRowId()));
+            maxRowIdProcessed.setValue(Math.max(maxRowIdProcessed.longValue(), expData.getRowId()));
         });
 
         if (data.size() == INDEXING_LIMIT)
         {
             // Requeue for the next batch. This avoids overwhelming the indexer's queue with documents
-            queue.addRunnable((q) -> indexData(q, modifiedSince, maxRowIdProcessed.getValue()));
+            queue.addRunnable((q) -> indexData(q, modifiedSince, maxRowIdProcessed.longValue()));
         }
     }
 
@@ -1298,7 +1302,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 .add(dataClass.getModified());
 
         var scope = table.getSchema().getScope();
-        scope.executeWithRetryReadOnly(tx ->
+        scope.executeWithRetryReadOnly(_ ->
                 new SqlSelector(scope, sql).forEachBatch(Data.class, 1000, batch ->
                         queue.addRunnable((q) -> batch.forEach(data ->
                                 new ExpDataImpl(data).index(q, null))
@@ -1387,7 +1391,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         if (protocols.isEmpty())
             return null;
 
-        return protocols.get(0);
+        return protocols.getFirst();
     }
 
     private void uncacheProtocol(Protocol p)
@@ -1588,6 +1592,19 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     public ExpDataClassDataTable createDataClassDataTable(String name, UserSchema schema, ContainerFilter cf, @NotNull ExpDataClass dataClass)
     {
         return new ExpDataClassDataTableImpl(name, schema, cf, (ExpDataClassImpl) dataClass);
+    }
+
+    @Override
+    public void registerDataClassDataIteratorTransformer(String dataClassName, @NotNull Supplier<DataClassDataIteratorTransformer> factory)
+    {
+        _dataClassDataIteratorTransformers.put(dataClassName.toLowerCase(), factory);
+    }
+
+    @Override
+    public @Nullable DataClassDataIteratorTransformer getDataClassDataIteratorTransformer(String dataClassName)
+    {
+        Supplier<DataClassDataIteratorTransformer> factory = _dataClassDataIteratorTransformers.get(dataClassName.toLowerCase());
+        return factory != null ? factory.get() : null;
     }
 
     @Override
@@ -1899,6 +1916,12 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     }
 
     @Override
+    public @NotNull AttachmentParent getDataClassAttachmentParent(@NotNull Container container, @NotNull String dataLsid)
+    {
+        return new ExpDataClassAttachmentParent(container, Lsid.parse(dataLsid));
+    }
+
+    @Override
     @Nullable
     public ExpData getEffectiveData(@NotNull ExpDataClass dataClass, String name, @NotNull Date effectiveDate, @NotNull Container container, @Nullable ContainerFilter cf)
     {
@@ -1939,7 +1962,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         {
             Long rowId = asLong(cache.remap(ExpSchema.SCHEMA_EXP_DATA, dataClassName, user, c, getContainerFilterTypeForFind(c), dataName));
             if (rowId != null)
-                return dataCache.computeIfAbsent(rowId, (x) -> getExpData(dataClass, rowId));
+                return dataCache.computeIfAbsent(rowId, (_) -> getExpData(dataClass, rowId));
         }
         catch (ConversionException e2)
         {
@@ -1954,7 +1977,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             Long rowId = ConvertHelper.convert(dataName, Long.class);
 
             // now attempt to resolve by rowId
-            return dataCache.computeIfAbsent(rowId, (x) -> getExpData(dataClass, rowId));
+            return dataCache.computeIfAbsent(rowId, (_) -> getExpData(dataClass, rowId));
         }
         catch (ConversionException e1)
         {
@@ -2077,7 +2100,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
             // We don't care which one we use. It's possible to have multiple matches if a run was deleted that was
             // already part of a hidden run group.
-            return new ExpExperimentImpl(exp.get(0));
+            return new ExpExperimentImpl(exp.getFirst());
         }
         else
         {
@@ -2162,7 +2185,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return getInputRoles(container, ContainerFilter.current(container, user), getTinfoMaterialInput(), types);
     }
 
-    private Set<String> getInputRoles(Container container, ContainerFilter filter, TableInfo table, ExpProtocol.ApplicationType... types)
+    private Set<String> getInputRoles(Container ignoredContainer, ContainerFilter filter, TableInfo table, ExpProtocol.ApplicationType... types)
     {
         SQLFragment sql = new SQLFragment("SELECT role FROM ");
         sql.append(table, "t");
@@ -2485,7 +2508,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 type = sampleType.getName();
             }
 
-            parentByType.computeIfAbsent(type, k -> new ArrayList<>());
+            parentByType.computeIfAbsent(type, _ -> new ArrayList<>());
             String parentName = parent.getName();
             if (parentName.contains(","))
                 parentName = "\"" + parentName + "\"";
@@ -2692,7 +2715,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             String parentsInnerToken = ret.addCommonTableExpression(dialect, parentsInnerSelect, "org_lk_exp_PARENTS_INNER", parentsInnerSelectFrag, recursive);
 
             String parentsSelect = map.get("$PARENTS$");
-            parentsSelect = StringUtils.replace(parentsSelect, "$PARENTS_INNER$", parentsInnerToken);
+            parentsSelect = Strings.CS.replace(parentsSelect, "$PARENTS_INNER$", parentsInnerToken);
             // don't use parentsSelect as key, it may not consolidate correctly because of parentsInnerToken
             parentsToken = ret.addCommonTableExpression(dialect, "$PARENTS$/" + Objects.toString(options.getExpTypeValue(), "ALL") + "/" + parentsInnerSelect, "org_lk_exp_PARENTS", SQLFragment.unsafe(parentsSelect), recursive);
         }
@@ -2701,13 +2724,13 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         if (options.isChildren())
         {
             String childrenInnerSelect = map.get("$CHILDREN_INNER$");
-            childrenInnerSelect = StringUtils.replace(childrenInnerSelect, "$EDGES$", edgesToken);
+            childrenInnerSelect = Strings.CS.replace(childrenInnerSelect, "$EDGES$", edgesToken);
             SQLFragment childrenInnerSelectFrag = SQLFragment.unsafe(childrenInnerSelect);
             childrenInnerSelectFrag.addAll(lsidsFrag.getParams());
             String childrenInnerToken = ret.addCommonTableExpression(dialect, childrenInnerSelect, "org_lk_exp_CHILDREN_INNER", childrenInnerSelectFrag, recursive);
 
             String childrenSelect = map.get("$CHILDREN$");
-            childrenSelect = StringUtils.replace(childrenSelect, "$CHILDREN_INNER$", childrenInnerToken);
+            childrenSelect = Strings.CS.replace(childrenSelect, "$CHILDREN_INNER$", childrenInnerToken);
             // don't use childrenSelect as key, it may not consolidate correctly because of childrenInnerToken
             childrenToken = ret.addCommonTableExpression(dialect, "$CHILDREN$/" + Objects.toString(options.getExpTypeValue(), "ALL") + "/" + childrenInnerSelect, "org_lk_exp_CHILDREN", SQLFragment.unsafe(childrenSelect), recursive);
         }
@@ -2895,7 +2918,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     {
         TableInfo edge = getTinfoEdge();
         int count = new SqlExecutor(edge.getSchema().getScope()).execute("DELETE FROM " + edge /* + (edge.getSqlDialect().isSqlServer() ? " WITH (TABLOCK, HOLDLOCK)" : "")  */ + " WHERE runId=?", runId);
-        LOG.debug("Removed edges for run " + runId + "; count = " + count);
+        LOG.debug("Removed edges for run {}; count = {}", runId, count);
     }
 
     // prepare for bulk insert of edges
@@ -2935,7 +2958,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                         try
                         {
                             if (LOG.isDebugEnabled())
-                                LOG.debug("  creating exp.object for " + missingObjectLsids.size() + " nodes:\n" + StringUtils.join(missingObjectLsids));
+                                LOG.debug("  creating exp.object for {} nodes:\n{}", missingObjectLsids.size(), StringUtils.join(missingObjectLsids));
                             for (var missingObjectLsid : missingObjectLsids)
                             {
                                 Map<String, Object> missingObjectRow = allNodesByLsid.get(missingObjectLsid);
@@ -2979,7 +3002,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         if (cpasType == null || cpasType.equals(ExpMaterial.DEFAULT_CPAS_TYPE) || cpasType.equals("Sample") || cpasType.equals(StudyService.SPECIMEN_NAMESPACE_PREFIX))
             return null;
 
-        return cpasTypeToObjectId.computeIfAbsent(cpasType, (cpasType1) -> {
+        return cpasTypeToObjectId.computeIfAbsent(cpasType, (_) -> {
 
             // NOTE: We can't use OntologyManager.ensureObject() here (which caches) because we don't know what container the SampleType is defined in
             OntologyObject oo = OntologyManager.getOntologyObject(null, cpasType);
@@ -2989,7 +3012,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 ExpSampleType st = SampleTypeService.get().getSampleType(cpasType);
                 if (st != null)
                 {
-                    LOG.debug("  creating exp.object.objectId for owner cpasType '" + cpasType + "' needed by child objects");
+                    LOG.debug("  creating exp.object.objectId for owner cpasType '{}' needed by child objects", cpasType);
                     return OntologyManager.ensureObject(st.getContainer(), cpasType, (Long) null);
                 }
             }
@@ -3027,17 +3050,17 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
         if (paramEdgesNotInDb.isEmpty() && dbEdgesNotInParams.isEmpty())
         {
-            LOG.debug("  all " + params.size() + " run edges and exp.edges match");
+            LOG.debug("  all {} run edges and exp.edges match", params.size());
             return true;
         }
         else
         {
             Map<Long, Identifiable> identifiableMap = new LongHashMap<>();
 
-            LOG.warn("*** Run " + runId + " failed verification: " + (params.size() - paramEdgesNotInDb.size()) + " run edges and exp.edges match");
+            LOG.warn("*** Run {} failed verification: {} run edges and exp.edges match", runId, params.size() - paramEdgesNotInDb.size());
             if (!paramEdgesNotInDb.isEmpty())
             {
-                LOG.warn("  " + paramEdgesNotInDb.size() + " run edges not in exp.edges table:");
+                LOG.warn("  {} run edges not in exp.edges table:", paramEdgesNotInDb.size());
                 if (LOG.isDebugEnabled())
                 {
                     for (List<Object> e : paramEdgesNotInDb)
@@ -3056,7 +3079,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
             if (!dbEdgesNotInParams.isEmpty())
             {
-                LOG.warn("  " + dbEdgesNotInParams.size() + " exp.edge table edges not in run:");
+                LOG.warn("  {} exp.edge table edges not in run:", dbEdgesNotInParams.size());
                 if (LOG.isDebugEnabled())
                 {
                     for (List<Object> e : dbEdgesNotInParams)
@@ -3154,7 +3177,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             this(runId, null, null, null);
         }
 
-        public SyncRunEdgesTask(long runId, Long runObjectId, String runLsid, Container runContainer)
+        public SyncRunEdgesTask(long runId, Long runObjectId, @Nullable String runLsid, @Nullable Container runContainer)
         {
             _runId = runId;
             _runObjectId = runObjectId;
@@ -3193,7 +3216,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         DbScope scope = getExpSchema().getScope();
         if (scope.isTransactionActive())
         {
-            LOG.debug("queueing syncRunEdges for run: " + runId);
+            LOG.debug("queueing syncRunEdges for run: {}", runId);
             DbScope.Transaction tx = scope.getCurrentTransaction();
             tx.addCommitTask(new SyncRunEdgesTask(runId), POSTCOMMIT);
         }
@@ -3209,7 +3232,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         DbScope scope = getExpSchema().getScope();
         if (scope.isTransactionActive())
         {
-            LOG.debug("queueing syncRunEdges for run: " + run.getRowId() + " - " + run.getName());
+            LOG.debug("queueing syncRunEdges for run: {} - {}", run.getRowId(), run.getName());
             DbScope.Transaction tx = scope.getCurrentTransaction();
             tx.addCommitTask(new SyncRunEdgesTask(run.getRowId(), run.getObjectId(), run.getLSID(), run.getContainer()), POSTCOMMIT);
         }
@@ -3296,7 +3319,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         void sync(@Nullable Map<String, Long> cpasTypeToObjectId)
         {
             DbScope expScope = getExpSchema().getScope();
-            expScope.executeWithRetry((DbScope.RetryFn<Void>) tx -> {
+            expScope.executeWithRetry((DbScope.RetryFn<Void>) _ -> {
                 syncInner(cpasTypeToObjectId);
                 return null;
             });
@@ -3313,7 +3336,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             CPUTimer timer = new CPUTimer("sync edges");
             timer.start();
 
-            LOG.debug((verifyEdgesNoInsert ? "Verifying" : "Rebuilding") + " edges for runId " + runId);
+            LOG.debug("{} edges for runId {}", verifyEdgesNoInsert ? "Verifying" : "Rebuilding", runId);
             Set<String> dataToCpasTypes = new HashSet<>();
             // NOTE: Originally, we just filtered exp.data by runId.  This works for most runs but includes intermediate exp.data nodes and caused the ExpTest to fail
             SQLFragment dataObjects = new SQLFragment()
@@ -3336,9 +3359,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             if (LOG.isDebugEnabled())
             {
                 if (!fromDataLsids.isEmpty())
-                    LOG.debug("  fromDataLsids:\n  " + StringUtils.join(fromDataLsids, "\n  "));
+                    LOG.debug("  fromDataLsids:\n  {}", StringUtils.join(fromDataLsids, "\n  "));
                 if (!toDataLsids.isEmpty())
-                    LOG.debug("  toDataLsids:\n  " + StringUtils.join(toDataLsids, "\n  "));
+                    LOG.debug("  toDataLsids:\n  {}", StringUtils.join(toDataLsids, "\n  "));
             }
 
             SQLFragment materials = new SQLFragment()
@@ -3383,8 +3406,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 removeEdgesForRun(runId);
 
             int edgeCount = fromDataLsids.size() + fromMaterialLsids.size() + toDataLsids.size() + toMaterialLsids.size() + provenanceStartingInputs.size() + provenanceFinalOutputs.size();
-            LOG.debug(String.format("  edge counts: input data=%d, input materials=%d, output data=%d, output materials=%d, input prov=%d, output prov=%d, total=%d",
-                    fromDataLsids.size(), fromMaterialLsids.size(), toDataLsids.size(), toMaterialLsids.size(), provenanceStartingInputs.size(), provenanceFinalOutputs.size(), edgeCount));
+            LOG.debug("  edge counts: input data={}, input materials={}, output data={}, output materials={}, input prov={}, output prov={}, total={}", fromDataLsids.size(), fromMaterialLsids.size(), toDataLsids.size(), toMaterialLsids.size(), provenanceStartingInputs.size(), provenanceFinalOutputs.size(), edgeCount);
 
             if (edgeCount > 0)
             {
@@ -3395,7 +3417,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                     {
                         OntologyObject runObj = OntologyManager.getOntologyObject(runContainer, runLsid);
                         if (runObj == null)
-                            LOG.debug("  run exp.object is null, creating: " + runLsid);
+                            LOG.debug("  run exp.object is null, creating: {}", runLsid);
                     }
                     if (!verifyEdgesNoInsert)
                         runObjectId = OntologyManager.ensureObject(runContainer, runLsid, (Long) null);
@@ -3496,7 +3518,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             }
 
             timer.stop();
-            LOG.debug("  " + (verifyEdgesNoInsert ? "verified" : "synced") + " edges in " + timer.getDuration());
+            LOG.debug("  {} edges in {}", verifyEdgesNoInsert ? "verified" : "synced", timer.getDuration());
 
             if (!verifyEdgesNoInsert && doIncrementalClosureInvalidation)
             {
@@ -3523,7 +3545,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                     getTinfoExperimentRun().getColumns("rowId", "objectid", "lsid", "container"), null, new Sort("rowId")).getMapCollection();
             try (Timing ignored = MiniProfiler.step("create edges"))
             {
-                LOG.debug("Rebuilding edges for " + runs.size() + " runs");
+                LOG.debug("Rebuilding edges for {} runs", runs.size());
                 for (Map<String, Object> run : runs)
                 {
                     var runId = asLong(run.get("rowId"));
@@ -3542,7 +3564,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             if (timing != null)
             {
                 timing.stop();
-                LOG.debug("Rebuilt all run-based edges: " + timing.getDuration() + " ms");
+                LOG.debug("Rebuilt all run-based edges: {} ms", timing.getDuration());
             }
         }
         ClosureQueryHelper.truncateAndRecreate(LOG);
@@ -3588,7 +3610,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             int runCount = 0;
             try (Timing ignored = MiniProfiler.step("create edges"))
             {
-                LOG.info("Verifying edges for " + runs.size() + " runs in " + c.getPath());
+                LOG.info("Verifying edges for {} runs in {}", runs.size(), c.getPath());
                 for (Map<String, Object> run : runs)
                 {
                     var runId = asLong(run.get("rowId"));
@@ -3604,7 +3626,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
                     if (runCount % 1000 == 0)
                     {
-                        LOG.info("  verified " + runCount + " runs...");
+                        LOG.info("  verified {} runs...", runCount);
                     }
                 }
             }
@@ -3612,7 +3634,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             if (timing != null)
             {
                 timing.stop();
-                LOG.info("Verified edges for " + (limit == null ? "all " : "only ") + runCount + " runs: " + timing.getDuration() + " ms");
+                LOG.info("Verified edges for {}{} runs: {} ms", limit == null ? "all " : "only ", runCount, timing.getDuration());
             }
         }
     }
@@ -3658,7 +3680,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
         if (!protocolApplications.isEmpty())
         {
-            protocolApplication = protocolApplications.get(0);
+            protocolApplication = protocolApplications.getFirst();
         }
         return protocolApplication;
     }
@@ -4104,7 +4126,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         for (Map<String, Object> map : maps)
         {
             String runLSID = (String) map.get("RunLSID");
-            List<Material> list = outputMap.computeIfAbsent(runLSID, k -> new ArrayList<>());
+            List<Material> list = outputMap.computeIfAbsent(runLSID, _ -> new ArrayList<>());
             Material m = f.fromMap(map);
             list.add(m);
         }
@@ -4215,7 +4237,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         if (data.isEmpty())
             return null;
 
-        return new ExpDataImpl(data.get(0));
+        return new ExpDataImpl(data.getFirst());
     }
 
     public Lsid getDataClassLsid(Container container)
@@ -4329,7 +4351,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                                 otherUsages.remove(run);
                                 if (!otherUsages.isEmpty())
                                 {
-                                    LOG.debug("Skipping delete of cross-run output data '" + output.getName() + "' (" + output.getRowId() + ") used by other runs: " + otherUsages.stream().map(ExpRun::getName).collect(Collectors.joining(", ")));
+                                    LOG.debug("Skipping delete of cross-run output data '{}' ({}) used by other runs: {}", output.getName(), output.getRowId(), otherUsages.stream().map(ExpRun::getName).collect(Collectors.joining(", ")));
                                     break;
                                 }
 
@@ -4342,7 +4364,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                         // CONSIDER: move these properties to the matching output exp.data with the same dataFileUrl?
                         if (hasFileProperties(container, input))
                         {
-                            LOG.debug("Skipping delete of cross-run input data '" + input.getName() + "' (" + input.getRowId() + ") with custom file properties");
+                            LOG.debug("Skipping delete of cross-run input data '{}' ({}) with custom file properties", input.getName(), input.getRowId());
                             continue;
                         }
 
@@ -4381,12 +4403,12 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 // Delete the cross run data completely
                 for (ExpDataImpl data : crossRunInputs)
                 {
-                    LOG.debug("Deleting cross-run input data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
+                    LOG.debug("Deleting cross-run input data: name={}, rowId={}, dataFileUrl={}", data.getName(), data.getRowId(), data.getDataFileUrl());
                     data.delete(user, false);
                 }
                 for (ExpDataImpl data : crossRunOutputs)
                 {
-                    LOG.debug("Deleting cross-run output data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
+                    LOG.debug("Deleting cross-run output data: name={}, rowId={}, dataFileUrl={}", data.getName(), data.getRowId(), data.getDataFileUrl());
                     data.delete(user, false);
                 }
 
@@ -4432,7 +4454,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         while (!idsToCheck.isEmpty())
         {
             String idsString = StringUtils.join(idsToCheck.iterator(), ", ");
-            idsToCheck = new HashSet<>();
 
             StringBuilder sb = new StringBuilder();
             sb.append("SELECT ParentProtocolId FROM exp.ProtocolAction WHERE ChildProtocolId IN (");
@@ -4440,7 +4461,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             sb.append(")");
             Long[] newIds = new SqlSelector(getExpSchema(), sb.toString()).getArray(Long.class);
 
-            idsToCheck.addAll(Arrays.asList(newIds));
+            idsToCheck = new HashSet<>(Arrays.asList(newIds));
 
             sb = new StringBuilder();
             sb.append("SELECT ChildProtocolId FROM exp.ProtocolAction WHERE ParentProtocolId IN (");
@@ -4510,7 +4531,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         List<ExpProtocolImpl> expProtocols = Arrays.stream(protocols).map(ExpProtocolImpl::new).collect(toList());
 
         if (!c.hasPermission(user, AdminPermission.class) && !runs.isEmpty())
-            throw new UnauthorizedException("You do not have sufficient permissions to delete '" + (expProtocols.size() == 1 ? expProtocols.get(0).getName() : "the protocols") + "'.");
+            throw new UnauthorizedException("You do not have sufficient permissions to delete '" + (expProtocols.size() == 1 ? expProtocols.getFirst().getName() : "the protocols") + "'.");
 
         AssayService assayService = AssayService.get();
 
@@ -4528,7 +4549,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
             for (ExpProtocol protocolToDelete : expProtocols)
             {
-                for (ExpExperiment batch : protocolToDelete.getBatches())
+                for (ExpExperiment batch : protocolToDelete.getBatches(null))
                 {
                     batch.delete(user);
                 }
@@ -4626,7 +4647,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     {
         if (null == assayService)
             return;
-        DbSchema expSchema = ExperimentService.get().getSchema();
+        DbSchema expSchema = getExpSchema();
         for (var expProtocol : expProtocols)
         {
             AssayProvider provider = assayService.getProvider(expProtocol);
@@ -4703,7 +4724,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         StudyPublishService studyPublishService = StudyPublishService.get();
         if (studyPublishService != null && !allMaterials.isEmpty())
         {
-            ExpSampleType sampleType = allMaterials.get(0).getSampleType();
+            ExpSampleType sampleType = allMaterials.getFirst().getSampleType();
             UserSchema userSchema = QueryService.get().getUserSchema(user, container, SamplesSchema.SCHEMA_NAME);
             TableInfo tableInfo = userSchema.getTable(sampleType.getName());
             if (tableInfo == null)
@@ -4847,7 +4868,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                             {
                                 ExpSampleTypeImpl st = material.getSampleType();
                                 if (st == null && !ExpMaterial.DEFAULT_CPAS_TYPE.equals(material.getCpasType()))
-                                    LOG.warn("SampleType '" + material.getCpasType() + "' not found while deleting sample '" + material.getName() + "'");
+                                    LOG.warn("SampleType '{}' not found while deleting sample '{}'", material.getCpasType(), material.getName());
                                 sampleTypes.put(cpasType, st);
                             }
                         }
@@ -4868,7 +4889,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                     if (!truncateContainer && !Objects.equals(material.getRowId(), material.getRootMaterialRowId()))
                     {
                         ExpSampleType sampleType = material.getSampleType();
-                        sampleTypeAliquotRoots.computeIfAbsent(sampleType, (k) -> new HashSet<>())
+                        sampleTypeAliquotRoots.computeIfAbsent(sampleType, (_) -> new HashSet<>())
                                 .add(material.getRootMaterialRowId());
                     }
                 }
@@ -4886,7 +4907,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                         deleteRunsUsingInputs(user, null, rawMaterials);
                     }
                 }
-                LOG.debug("Completed batch of sample deletion. " + count + " rows processed so far");
+                LOG.debug("Completed batch of sample deletion. {} rows processed so far", count);
             }
 
             // generate in clause for the Material LSIDs
@@ -5037,7 +5058,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
             transaction.commit();
             if (timing != null)
-                LOG.info("SampleType delete timings\n" + timing.dump());
+                LOG.info("SampleType delete timings\n{}", timing.dump());
             return count;
         }
     }
@@ -5340,7 +5361,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
                 if (data.getClassId() != null)
                 {
-                    List<Long> byClass = rowIdsByClass.computeIfAbsent(data.getClassId(), k -> new ArrayList<>(10));
+                    List<Long> byClass = rowIdsByClass.computeIfAbsent(data.getClassId(), _ -> new ArrayList<>(10));
                     byClass.add(data.getRowId());
                 }
                 allLsids.add(data.getLSID());
@@ -5497,18 +5518,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             {
                 deleteExperimentRunsByRowIds(c, user, runId);
             }
-            ListService ls = ListService.get();
-            if (ls != null)
-            {
-                for (ListDefinition list : ListService.get().getLists(c, null, false).values())
-                {
-                    // Temporary fix for Issue 21400: **Deleting workbook deletes lists defined in parent container
-                    if (list.getContainer().equals(c))
-                    {
-                        list.delete(user);
-                    }
-                }
-            }
+
+            // Delete lists (because for some reason lists are under the purview of experiment...)
+            ListService.get().deleteLists(c, user, null);
 
             // Delete DataClasses and their exp.Data members
             // Need to delete DataClass before SampleTypes since they may be referenced by the DataClass
@@ -5634,7 +5646,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             for (ExpData data : datas)
             {
                 ExperimentDataHandler handler = data.findDataHandler();
-                List<ExpData> list = handlers.computeIfAbsent(handler, k -> new ArrayList<>());
+                List<ExpData> list = handlers.computeIfAbsent(handler, _ -> new ArrayList<>());
                 list.add(data);
             }
             for (Map.Entry<ExperimentDataHandler, List<ExpData>> entry : handlers.entrySet())
@@ -5797,6 +5809,108 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     public List<Pair<String, String>> getRunsAndRolesUsingMaterial(ExpMaterial material)
     {
         return getRunsAndRolesUsingInput(material, getTinfoMaterialInput(), "MaterialId", () -> getRunsUsingMaterials(material.getRowId()));
+    }
+
+    @Override
+    public List<Long> getDerivationRunIdsForDataClassExport(long dataClassRowId)
+    {
+        SQLFragment sql = new SQLFragment("""
+            SELECT DISTINCT er.RowId
+            FROM exp.ExperimentRun er
+            WHERE er.ProtocolLSID = ?
+            AND er.RowId IN (
+                SELECT pa.RunId FROM exp.ProtocolApplication pa
+                INNER JOIN exp.DataInput di ON di.TargetApplicationId = pa.RowId
+                INNER JOIN exp.Data d ON di.DataId = d.RowId
+                WHERE d.classId = ?
+                UNION
+                SELECT pa.RunId FROM exp.ProtocolApplication pa
+                INNER JOIN exp.Data d ON d.SourceApplicationId = pa.RowId
+                WHERE d.classId = ?
+            )
+            AND NOT EXISTS (
+                SELECT 1 FROM exp.ProtocolApplication pa2
+                INNER JOIN exp.MaterialInput mi ON mi.TargetApplicationId = pa2.RowId
+                WHERE pa2.RunId = er.RowId
+            )
+            AND NOT EXISTS (
+                SELECT 1 FROM exp.Material m
+                INNER JOIN exp.ProtocolApplication pa3 ON m.SourceApplicationId = pa3.RowId
+                WHERE pa3.RunId = er.RowId
+            )
+            """,
+            SAMPLE_DERIVATION_PROTOCOL_LSID,
+            dataClassRowId,
+            dataClassRowId
+        );
+
+        return new SqlSelector(getExpSchema(), sql).getArrayList(Long.class);
+    }
+
+    @Override
+    public List<Long> getDerivationRunIdsForSampleTypesExport(Collection<String> sampleTypeLsids, Container c, boolean includeRunsWithDataIO)
+    {
+        if (sampleTypeLsids.isEmpty())
+            return Collections.emptyList();
+
+        SQLFragment inClause = getExpSchema().getSqlDialect().appendInClauseSql(new SQLFragment(), sampleTypeLsids);
+
+        // Subquery to find runs that use materials from the given sample types and container
+        SQLFragment materialsSubquery = new SQLFragment("""
+            SELECT pa.RunId FROM exp.ProtocolApplication pa
+            INNER JOIN exp.MaterialInput mi ON mi.TargetApplicationId = pa.RowId
+            INNER JOIN exp.Material m ON mi.MaterialId = m.RowId
+            WHERE m.cpasType """);
+        materialsSubquery.append(inClause);
+        materialsSubquery.append(" AND m.Container = ?\n");
+        materialsSubquery.add(c);
+        materialsSubquery.append("""
+            UNION
+            SELECT pa.RunId FROM exp.ProtocolApplication pa
+            INNER JOIN exp.Material m ON m.SourceApplicationId = pa.RowId
+            WHERE m.cpasType """);
+        materialsSubquery.append(inClause);
+        materialsSubquery.append(" AND m.Container = ?");
+        materialsSubquery.add(c);
+
+        SQLFragment sql = new SQLFragment();
+        sql.append("SELECT DISTINCT er.RowId\nFROM exp.ExperimentRun er\nWHERE er.RowId IN (\n");
+        sql.append(materialsSubquery);
+        sql.append(")\n");
+
+        if (includeRunsWithDataIO)
+        {
+            // Include all derivation and aliquot runs
+            sql.append("AND er.ProtocolLSID IN (?, ?)\n");
+            sql.add(SAMPLE_DERIVATION_PROTOCOL_LSID);
+            sql.add(SAMPLE_ALIQUOT_PROTOCOL_LSID);
+        }
+        else
+        {
+            // Aliquot runs are always included; derivation runs only if they have no data inputs/outputs
+            sql.append("AND (\n");
+            sql.append("    er.ProtocolLSID = ?\n");
+            sql.add(SAMPLE_ALIQUOT_PROTOCOL_LSID);
+            sql.append("    OR (\n");
+            sql.append("        er.ProtocolLSID = ?\n");
+            sql.add(SAMPLE_DERIVATION_PROTOCOL_LSID);
+            sql.append("""
+                            AND NOT EXISTS (
+                                SELECT 1 FROM exp.ProtocolApplication pa2
+                                INNER JOIN exp.DataInput di ON di.TargetApplicationId = pa2.RowId
+                                WHERE pa2.RunId = er.RowId
+                            )
+                            AND NOT EXISTS (
+                                SELECT 1 FROM exp.Data d
+                                INNER JOIN exp.ProtocolApplication pa3 ON d.SourceApplicationId = pa3.RowId
+                                WHERE pa3.RunId = er.RowId
+                            )
+                        )
+                    )
+                    """);
+        }
+
+        return new SqlSelector(getExpSchema(), sql).getArrayList(Long.class);
     }
 
     @Override
@@ -6029,7 +6143,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         if (null == dataClass)
         {
             // this can happen if the DataClass wasn't created completely
-            LOG.warn("Can't find DataClass with rowId " + rowId + " for deletion");
+            LOG.warn("Can't find DataClass with rowId {} for deletion", rowId);
             return;
         }
         if (!dataClass.getContainer().equals(c))
@@ -6356,7 +6470,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         ExpProtocolApplicationImpl protApp = protStepMap.get(srcAppId);
         if (protApp == null)
         {
-            LOG.warn("Could not find cached protocol application " + srcAppId + " when populating run " + expRun.getRowId() + " in " + expRun.getContainer().getPath() + ", attempting to fetch");
+            LOG.warn("Could not find cached protocol application {} when populating run {} in {}, attempting to fetch", srcAppId, expRun.getRowId(), expRun.getContainer().getPath());
             if (srcAppId != null)
             {
                 protApp = getExpProtocolApplication(srcAppId);
@@ -6753,7 +6867,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             {
                 throw new IllegalArgumentException("Protocol has the wrong number of steps for a simple protocol; it should have three.");
             }
-            ExpProtocolActionImpl action1 = actions.get(0);
+            ExpProtocolActionImpl action1 = actions.getFirst();
             assert action1.getActionSequence() == SIMPLE_PROTOCOL_FIRST_STEP_SEQUENCE;
             assert action1.getChildProtocol().getRowId() == parentProtocol.getRowId();
 
@@ -7008,7 +7122,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         {
             throw new IllegalArgumentException("Protocol has the wrong number of steps for a simple protocol; it should have three.");
         }
-        ExpProtocolActionImpl action1 = actions.get(0);
+        ExpProtocolActionImpl action1 = actions.getFirst();
         assert action1.getActionSequence() == SIMPLE_PROTOCOL_FIRST_STEP_SEQUENCE;
         assert action1.getChildProtocol().getRowId() == parentProtocol.getRowId();
 
@@ -7219,7 +7333,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         {
             // insert into exp.object
             List<List<?>> expObjectParams = params.stream().map(
-                    runParams -> List.of(/* LSID */ runParams.get(0), c.getId())
+                    runParams -> List.of(/* LSID */ runParams.getFirst(), c.getId())
             ).collect(toList());
             String expObjectSql = "INSERT INTO " + OntologyManager.getTinfoObject() +
                     " (ObjectUri, Container) VALUES (?, ?)";
@@ -7232,7 +7346,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
             Table.batchExecute(getExpSchema(), sql, params);
 
-            List<String> runLsids = params.stream().map(p -> (String) p.get(0)).toList();
+            List<String> runLsids = params.stream().map(p -> (String) p.getFirst()).toList();
             SimpleFilter filter = new SimpleFilter(FieldKey.fromParts(ExpExperimentTable.Column.LSID.name()), runLsids, IN);
             Map<String, ExperimentRun> ret = new CaseInsensitiveHashMap<>();
             getExperimentRuns(filter).forEach(er -> ret.put(er.getLSID(), er));
@@ -7950,9 +8064,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             DefaultValueService.get().setDefaultValues(domain.getContainer(), defaultValues);
 
             if (options != null && options.getExcludedContainerIds() != null && !options.getExcludedContainerIds().isEmpty())
-                ExperimentService.get().ensureDataTypeContainerExclusions(DataTypeForExclusion.DataClass, options.getExcludedContainerIds(), impl.getRowId(), u);
+                ensureDataTypeContainerExclusions(DataTypeForExclusion.DataClass, options.getExcludedContainerIds(), impl.getRowId(), u);
             else
-                ExperimentService.get().ensureDataTypeContainerExclusionsNonAdmin(DataTypeForExclusion.DataClass, impl.getRowId(), c, u);
+                ensureDataTypeContainerExclusionsNonAdmin(DataTypeForExclusion.DataClass, impl.getRowId(), c, u);
 
             tx.addCommitTask(() -> clearDataClassCache(c), DbScope.CommitTaskOption.IMMEDIATE, POSTCOMMIT, POSTROLLBACK);
             tx.addCommitTask(() -> indexDataClass(getDataClass(c, bean.getName()), SearchService.get().defaultTask().getQueue(c, SearchService.PRIORITY.modified)), POSTCOMMIT);
@@ -8032,7 +8146,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
         try (DbScope.Transaction transaction = ensureTransaction())
         {
-            LOG.debug("Saving data class " +  dataClass.getName());
+            LOG.debug("Saving data class {}", dataClass.getName());
             dataClass.save(u);
 
             SchemaKey schemaKey = SchemaKey.fromParts(ExpSchema.SCHEMA_NAME, DataClassUserSchema.NAME);
@@ -8041,7 +8155,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
             if (options != null && options.getExcludedContainerIds() != null)
             {
-                Pair<Collection<String>, Collection<String>> exclusionChanges = ExperimentService.get().ensureDataTypeContainerExclusions(DataTypeForExclusion.DataClass, options.getExcludedContainerIds(), dataClass.getRowId(), u);
+                Pair<Collection<String>, Collection<String>> exclusionChanges = ensureDataTypeContainerExclusions(DataTypeForExclusion.DataClass, options.getExcludedContainerIds(), dataClass.getRowId(), u);
                 oldProps.put("ContainerExclusions", exclusionChanges.first);
                 newProps.put("ContainerExclusions", exclusionChanges.second);
             }
@@ -8092,7 +8206,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             throw new ApiUsageException(reservedError);
     }
 
-    private void validateDataClassOptions(@NotNull Container c, @NotNull User u, @Nullable DataClassDomainKindProperties options)
+    private void validateDataClassOptions(@NotNull Container c, @NotNull User ignoredU, @Nullable DataClassDomainKindProperties options)
     {
         if (options == null)
             return;
@@ -8375,7 +8489,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         // insert base ProtocolAction prior to inserting steps
         ProtocolAction previousAction;
         if (isUpdate)
-            previousAction = getProtocolActions(baseProtocol.getRowId()).get(0);
+            previousAction = getProtocolActions(baseProtocol.getRowId()).getFirst();
         else
         {
             previousAction = insertProtocolAction(baseProtocol, baseProtocol, actionSequence, user);
@@ -8595,9 +8709,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
      */
     public Collection<Long> ensureAliases(User user, Set<String> aliasNames)
     {
-        final ExperimentService svc = ExperimentService.get();
-
-        TableInfo aliasTable = svc.getTinfoAlias();
+        TableInfo aliasTable = getTinfoAlias();
         SimpleFilter filter = new SimpleFilter();
         filter.addCondition(FieldKey.fromParts("name"), aliasNames, IN);
         Map<String, Long> existingAliases = new HashMap<>();
@@ -8644,7 +8756,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     }
 
     @Override
-    public void onBeforeRunSaved(ExpProtocol protocol, ExpRun run, Container container, User user) throws BatchValidationException
+    public void onBeforeRunSaved(ExpProtocol protocol, ExpRun run, Container container, User user)
     {
         for (ExperimentListener listener : _listeners)
         {
@@ -8936,12 +9048,10 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             // exclude the containers this user does not have permission to
             if (folderIds.removeAll(userFolderIds))
             {
-                ExperimentService.get().ensureDataTypeContainerExclusions(dataType, folderIds, dataTypeId, user);
+                ensureDataTypeContainerExclusions(dataType, folderIds, dataTypeId, user);
             }
-
         }
     }
-
 
     private void addAuditEventForDataTypeContainerUpdate(DataTypeForExclusion type, String containerId, User user)
     {
@@ -9218,7 +9328,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             .append(" WHERE ")
             .append(aliasField)
             .append(" IS NOT NULL");
-        List<String> aliases = new SqlSelector(ExperimentService.get().getSchema(), sql).getArrayList(String.class);
+        List<String> aliases = new SqlSelector(getExpSchema(), sql).getArrayList(String.class);
 
         Long requiredSampleParentCount = 0L;
         Long requiredDataParentCount = 0L;
@@ -9252,7 +9362,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         Map<String, Object> metrics = new HashMap<>();
         Pair<Long, Long> samplesMetrics = getParentAliasMetrics(getTinfoSampleType(), "materialparentimportaliasmap");
         metrics.put("RequiredSampleParentsForSampleTypes", samplesMetrics.first);
-        metrics.put("RequiredSourceParentsForSampleTypes", samplesMetrics.first);
+        metrics.put("RequiredSourceParentsForSampleTypes", samplesMetrics.second);
         Pair<Long, Long> dataMetrics = getParentAliasMetrics(getTinfoDataClass(), "dataparentimportaliasmap");
         metrics.put("RequiredSampleParentsForDataClasses", dataMetrics.first);
         metrics.put("RequiredSourceParentsForDataClasses", dataMetrics.second);
@@ -9275,7 +9385,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                     .append(" WHERE ")
                     .append(nameExpressionType.nameExpressionCol)
                     .append(" IS NOT NULL");
-            List<String> nameExpressionStrs = new SqlSelector(ExperimentService.get().getSchema(), sql).getArrayList(String.class);
+            List<String> nameExpressionStrs = new SqlSelector(getExpSchema(), sql).getArrayList(String.class);
 
             Map<String, Long> substitutionMetrics = new HashMap<>();
             for (NameGenerator.SubstitutionValue substitutionValue : NameGenerator.SubstitutionValue.values())
@@ -9336,7 +9446,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return metrics;
     }
 
-    public @NotNull Pair<Set<String>, Set<String>> getDataTypesWithRequiredLineage(Integer parentDataTypeRowId, boolean isSampleParent, Container container, User user)
+    public @NotNull Pair<Set<String>, Set<String>> getDataTypesWithRequiredLineage(Integer parentDataTypeRowId, boolean isSampleParent, Container container, User ignoredUser)
     {
         Set<String> sampleTypes = new HashSet<>();
         Set<String> dataClasses = new HashSet<>();
@@ -9434,7 +9544,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return totalCount > withParentCount;
     }
 
-    public String getInvalidRequiredImportAliasUpdate(String dataTypeLsid, boolean isSampleType, Map<String, Map<String, Object>> newAliases, Set<String> existingRequiredInputs, Container c, User u)
+    public String getInvalidRequiredImportAliasUpdate(String dataTypeLsid, boolean isSampleType, Map<String, Map<String, Object>> newAliases, Set<String> existingRequiredInputs, Container c, User ignoredU)
     {
         for (Map.Entry<String, Map<String, Object>> newEntry : newAliases.entrySet())
         {
@@ -9465,22 +9575,22 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return null;
     }
 
-    private static @Nullable TableInfo getTableInfo(String schemaName)
+    private @Nullable TableInfo getTableInfo(String schemaName)
     {
         // 'samples' | 'exp.data' | 'assay'
         if (SamplesSchema.SCHEMA_NAME.equalsIgnoreCase(schemaName))
-            return ExperimentService.get().getTinfoMaterial();
+            return getTinfoMaterial();
         else if ("exp.data".equalsIgnoreCase(schemaName))
-            return  ExperimentService.get().getTinfoData();
+            return getTinfoData();
         else if (AssaySchema.NAME.equalsIgnoreCase(schemaName))
-            return ExperimentService.get().getTinfoExperimentRun();
+            return getTinfoExperimentRun();
         else
             return null;
     }
 
-    public static Pair<Integer, Integer> getCurrentAndCrossFolderDataCount(Collection<Long> rowIds, String dataType, Container container)
+    public Pair<Integer, Integer> getCurrentAndCrossFolderDataCount(Collection<Long> rowIds, String dataType, Container container)
     {
-        DbSchema expSchema = DbSchema.get("exp", DbSchemaType.Module);
+        DbSchema expSchema = getExpSchema();
         SqlDialect dialect = expSchema.getSqlDialect();
 
         TableInfo tableInfo = getTableInfo(dataType);
@@ -9494,7 +9604,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             .add(container.getId())
             .append("\nAND RowId ");
         dialect.appendInClauseSql(currentFolderCountSql, rowIds);
-        int currentFolderSelectionCount = new SqlSelector(expSchema, currentFolderCountSql).getArrayList(Integer.class).get(0);
+        int currentFolderSelectionCount = new SqlSelector(expSchema, currentFolderCountSql).getArrayList(Integer.class).getFirst();
 
         SQLFragment crossFolderCountSql = new SQLFragment()
             .append(" SELECT COUNT(*) FROM ")
@@ -9503,7 +9613,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             .add(container.getId())
             .append("\nAND RowId ");
         dialect.appendInClauseSql(crossFolderCountSql, rowIds);
-        int crossFolderSelectionCount = new SqlSelector(expSchema, crossFolderCountSql).getArrayList(Integer.class).get(0);
+        int crossFolderSelectionCount = new SqlSelector(expSchema, crossFolderCountSql).getArrayList(Integer.class).getFirst();
 
         return new Pair<>(currentFolderSelectionCount, crossFolderSelectionCount);
     }
@@ -9543,15 +9653,22 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return new SqlExecutor(aliasMapTable.getSchema()).execute(aliasMapUpdate);
     }
 
-    @Override
-    public Map<String, Integer> moveDataClassObjects(Collection<? extends ExpData> dataObjects, @NotNull Container sourceContainer, @NotNull Container targetContainer, @NotNull User user, @Nullable String userComment, @Nullable AuditBehaviorType auditBehavior) throws ExperimentException, BatchValidationException
+    public Map<String, Integer> moveDataClassObjects(
+        Collection<? extends ExpData> dataObjects,
+        @NotNull Container sourceContainer,
+        @NotNull Container targetContainer,
+        @NotNull User user,
+        BatchValidationException errors,
+        @Nullable String userComment,
+        @Nullable AuditBehaviorType auditBehavior
+    ) throws ExperimentException, BatchValidationException
     {
         if (dataObjects == null || dataObjects.isEmpty())
             throw new IllegalArgumentException("No sources provided to move operation.");
 
         Map<ExpDataClass, List<ExpData>> dataClassesMap = new HashMap<>();
         dataObjects.forEach(dataObject ->
-                dataClassesMap.computeIfAbsent(dataObject.getDataClass(user), t -> new ArrayList<>()).add(dataObject));
+                dataClassesMap.computeIfAbsent(dataObject.getDataClass(user), _ -> new ArrayList<>()).add(dataObject));
 
         Map<String, Integer> updateCounts = new HashMap<>();
         updateCounts.put("sources", 0);
@@ -9575,6 +9692,12 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 DataClassUserSchema schema = new DataClassUserSchema(dataClass.getContainer(), user);
                 TableInfo dataClassTable = schema.getTable(dataClass.getName());
 
+                // Before trigger per batch
+                Map<String, Object> extraContext = Map.of("dataClass", dataClass, "targetContainer", targetContainer, "classObjects", classObjects, "dataIds", dataIds);
+                dataClassTable.fireBatchTrigger(sourceContainer, user, TableInfo.TriggerType.MOVE, null, true, errors, extraContext);
+                if (errors.hasErrors())
+                    throw errors;
+
                 // update exp.data.container
                 int updateCount = Table.updateContainer(getTinfoData(), "rowId", dataIds, targetContainer, user, true);
                 updateCounts.put("sources", updateCounts.get("sources") + updateCount);
@@ -9588,17 +9711,14 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 // update core.document.container for any files attached to the data objects that are moving
                 moveDataClassObjectAttachments(dataClass, classObjects, targetContainer, user);
 
-                // LKB registry data class objects can have related junction list rows that need to be updated as well.
-                // Since those tables already wire up trigger scripts, we'll use that mechanism here as well for the move event.
-                BatchValidationException errors = new BatchValidationException();
-                Map<String, Object> extraContext = Map.of("targetContainer", targetContainer, "classObjects", classObjects, "dataIds", dataIds);
-                dataClassTable.fireBatchTrigger(sourceContainer, user, TableInfo.TriggerType.MOVE, false, errors, extraContext);
+                // After trigger per batch
+                dataClassTable.fireBatchTrigger(sourceContainer, user, TableInfo.TriggerType.MOVE, null, false, errors, extraContext);
                 if (errors.hasErrors())
                     throw errors;
 
                 // move audit events associated with the sources that are moving
                 int auditEventCount = QueryService.get().moveAuditEvents(targetContainer, dataIds, "exp.data", dataClassTable.getName());
-                updateCounts.compute("sourceAuditEvents", (k, c) -> c == null ? auditEventCount : c + auditEventCount);
+                updateCounts.compute("sourceAuditEvents", (_, c) -> c == null ? auditEventCount : c + auditEventCount);
 
                 // create summary audit entries for the source container only.  The message is pretty generic, so having it
                 // in both source and target doesn't help much.
@@ -9653,8 +9773,8 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         {
             Lsid lsid = new Lsid(data.getLSID());
             parents.add(new ExpDataClassAttachmentParent(data.getContainer(), lsid));
-
         }
+
         try
         {
             AttachmentService.get().moveAttachments(targetContainer, parents, user);
@@ -9671,13 +9791,12 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         Map<Long, Set<ExpData>> runIdData = new LongHashMap<>();
         dataObjects.forEach(dataObject -> {
             if (dataObject.getRunId() != null)
-                runIdData.computeIfAbsent(dataObject.getRunId(), t -> new HashSet<>()).add(dataObject);
+                runIdData.computeIfAbsent(dataObject.getRunId(), _ -> new HashSet<>()).add(dataObject);
         });
         // find the set of runs associated with data objects that are moving
-        List<? extends ExpRun> runs = ExperimentService.get().getExpRuns(runIdData.keySet());
         List<ExpRun> toUpdate = new ArrayList<>();
         List<ExpRun> toSplit = new ArrayList<>();
-        for (ExpRun run : runs)
+        for (ExpRun run : getExpRuns(runIdData.keySet()))
         {
             Set<Long> outputIds = run.getDataOutputs().stream().map(ExpData::getRowId).collect(Collectors.toSet());
             Set<Long> movingIds = runIdData.get(run.getRowId()).stream().map(ExpData::getRowId).collect(Collectors.toSet());
@@ -9708,7 +9827,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         runsTable.getSchema().getSqlDialect().appendInClauseSql(materialUpdate, runRowIds);
         int updateCount = new SqlExecutor(runsTable.getSchema()).execute(materialUpdate);
 
-        ExperimentService.get().updateExpObjectContainers(getTinfoExperimentRun(), runRowIds, targetContainer);
+        updateExpObjectContainers(getTinfoExperimentRun(), runRowIds, targetContainer);
 
         // LKB media have object properties associated with the protocol applications of the run
         // and object properties associated with the material and data inputs for those protocol applications
@@ -9732,7 +9851,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     private int splitExperimentRuns(List<ExpRun> runs, Map<Long, Set<ExpData>> movingData, Container targetContainer, User user) throws ExperimentException, BatchValidationException
     {
         final ViewBackgroundInfo targetInfo = new ViewBackgroundInfo(targetContainer, user, null);
-        ExperimentServiceImpl expService = (ExperimentServiceImpl) ExperimentService.get();
         int runCount = 0;
         for (ExpRun run : runs)
         {
@@ -9765,7 +9883,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             try
             {
                 // create a new derivation run for the data that are moving
-                expService.derive(run.getMaterialInputs(), run.getDataInputs(), Collections.emptyMap(), movingOutputsMap, targetInfo, LOG);
+                derive(run.getMaterialInputs(), run.getDataInputs(), Collections.emptyMap(), movingOutputsMap, targetInfo, LOG);
             }
             catch (ValidationException e)
             {
@@ -9796,11 +9914,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
         Map<ExpProtocol, List<ExpRun>> protocolMap = new HashMap<>();
         assayRuns.forEach(run ->
-                protocolMap.computeIfAbsent(run.getProtocol(), t -> new ArrayList<>()).add(run));
+                protocolMap.computeIfAbsent(run.getProtocol(), _ -> new ArrayList<>()).add(run));
 
         List<String> runLsids = assayRuns.stream().map(ExpRun::getLSID).toList();
-
-        ExperimentService expService = ExperimentService.get();
 
         AbstractAssayProvider.AssayMoveData assayMoveData = new AbstractAssayProvider.AssayMoveData(new HashMap<>(), new HashMap<>());
         try (DbScope.Transaction transaction = ensureTransaction())
@@ -9824,7 +9940,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                     {
                         provider.moveRuns(runs, targetContainer, user, assayMoveData);
                         Map<String, Integer> counts = assayMoveData.counts();
-                        int auditEventCount = expService.moveAuditEvents(targetContainer, runLsids);
+                        int auditEventCount = moveAuditEvents(targetContainer, runLsids);
                         counts.put("auditEvents", counts.getOrDefault("auditEvents", 0) + auditEventCount);
                         if (auditBehavior != null && AuditBehaviorType.NONE != auditBehavior)
                         {
@@ -9869,13 +9985,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         {
             if (!targetFile.getParentFile().mkdirs())
             {
-                LOG.warn(String.format("Creation of target directory '%s' to move file '%s' to, for '%s' assay run '%s' (field: '%s') failed.",
-                    targetFile.getParent(),
-                    sourceFile.getAbsolutePath(),
-                    assayName,
-                    runName,
-                    fieldName
-                ));
+                LOG.warn("Creation of target directory '{}' to move file '{}' to, for '{}' assay run '{}' (field: '{}') failed.", targetFile.getParent(), sourceFile.getAbsolutePath(), assayName, runName, fieldName);
                 return false;
             }
         }
@@ -9884,8 +9994,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return moveFileLinkFile(sourceFile, targetFile, sourceContainer, user, changeDetail, txAuditEvent, fieldName);
     }
 
-    @Override
-    public int moveAuditEvents(Container targetContainer, List<String> runLsids)
+    private int moveAuditEvents(Container targetContainer, List<String> runLsids)
     {
         ExperimentAuditProvider auditProvider = new ExperimentAuditProvider();
         return auditProvider.moveEvents(targetContainer, runLsids);
@@ -9900,7 +10009,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         int numUniqueIdCols = 0;
         SQLFragment unionSql;
 
-        DbSchema dbSchema = ExperimentService.get().getSchema();
+        DbSchema dbSchema = getExpSchema();
         SqlDialect dialect = dbSchema.getSqlDialect();
         UserSchema samplesUserSchema = QueryService.get().getUserSchema(user, container, SamplesSchema.SCHEMA_NAME);
         List<ExpSampleTypeImpl> sampleTypes = SampleTypeServiceImpl.get().getSampleTypes(container, true);
@@ -9942,7 +10051,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                         .append("CAST (ST.").appendIdentifier(col.getSelectIdentifier()).append(" AS VARCHAR)")
                         .append(" AS ").append(UNIQUE_ID_COL_NAME);
                 query.append(" FROM ").append(provisioned, "ST");
-                query.append(" INNER JOIN ").append(ExperimentService.get().getTinfoMaterial(), "M").append(" ON M.RowId = ST.RowId");
+                query.append(" INNER JOIN ").append(getTinfoMaterial(), "M").append(" ON M.RowId = ST.RowId");
                 query.append(" WHERE ").appendIdentifier(col.getSelectIdentifier()).appendInClause(isIntegerField ? intIds : uniqueIds, dialect);
                 unionAll = "\n UNION ALL\n";
             }
@@ -10075,7 +10184,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             boolean success = sourceFile.renameTo(targetFile);
             if (!success)
             {
-                LOG.warn(String.format("Rename of '%s' to '%s' failed for %s" , sourceFile.getAbsolutePath(), targetFile.getAbsolutePath(), actionComment));
+                LOG.warn("Rename of '{}' to '{}' failed for {}", sourceFile.getAbsolutePath(), targetFile.getAbsolutePath(), actionComment);
                 return false;
             }
 
@@ -10316,7 +10425,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             List<? extends ExpMaterialRunInput> materialRunInputs = pa.getMaterialInputs();
             assertEquals(1, materialRunInputs.size());
 
-            ExpMaterialRunInputImpl materialRunInput = (ExpMaterialRunInputImpl)materialRunInputs.get(0);
+            ExpMaterialRunInputImpl materialRunInput = (ExpMaterialRunInputImpl)materialRunInputs.getFirst();
             assertEquals(sampleIn, materialRunInput.getMaterial());
             assertEquals("Sample Goo", materialRunInput.getRole());
             assertEquals(MaterialInput.NAMESPACE, materialRunInput.getLSIDNamespacePrefix());
